# platform.core.system.sensord

./: OA  .gitignore  CMakeLists.txt  LICENSE.APLv2  Virtual_Sensor_Configuration.htm  project.config  sensor_plugins.xml.in  sensor_plugins_sim.xml.in  sensord.efl  sensors.xml.in  virtual_sensors.xml  virtual_sensors.xml.in
src/: CMakeLists.txt  CMakeLists.txt~
src/accel/: CMakeLists.txt  Makefile  accel_sensor.cpp  accel_sensor.cpp~  accel_sensor.h  accel_sensor_hal.cpp  accel_sensor_hal.h  cmake_install.cmake  sensor_config.cpp  sensor_config.h  sensor_hal.h  sensor_shared.cpp  sensor_shared.h  sensors_hal.cpp  sensors_hal.h
src/ambient_temperature/: CMakeLists.txt  EngineInterface.h  ambient_temperature_sensor.cpp  ambient_temperature_sensor.h
src/auto_rotation/: CMakeLists.txt  auto_rotation_alg.h  auto_rotation_alg_emul.cpp  auto_rotation_alg_emul.h  auto_rotation_sensor.cpp  auto_rotation_sensor.h
src/bio_led_red/: CMakeLists.txt  bio_led_red_sensor.cpp  bio_led_red_sensor_hal.cpp  bio_led_red_sensor_hal.h
src/client/: CMakeLists.txt  client.cpp  client_common.cpp  client_common.h  client_deprecated.cpp  command_channel.cpp  command_channel.h  creg_event_info.h  csensor_client_info.cpp  csensor_client_info.h  csensor_event_listener.cpp  csensor_event_listener.h  csensor_handle_info.cpp  csensor_handle_info.h  dbus_listener.cpp  dbus_listener.h  external_client.cpp  external_data_channel.cpp  external_data_channel.h  external_sensor_manager.cpp  external_sensor_manager.h  poller.cpp  poller.h  reg_event_info.h  sensor.pc.in  sensor_client_info.cpp  sensor_client_info.h  sensor_event_listener.cpp  sensor_event_listener.h  sensor_handle_info.cpp  sensor_handle_info.h  sensor_info_manager.cpp  sensor_info_manager.h  sensor_internal.h  sensor_internal_deprecated.h
src/fusion/: CMakeLists.txt  fusion_sensor.cpp  fusion_sensor.h  hardware_fusion_sensor.docx  hardware_fusion_sensor.html
src/geo/: CMakeLists.txt  geo_sensor.cpp  geo_sensor.h  geo_sensor_hal.cpp  geo_sensor_hal.h
src/gravity/: CMakeLists.txt  gravity_sensor.cpp  gravity_sensor.h
src/gyro/: CMakeLists.txt  Makefile  cmake_install.cmake  gyro_sensor.cpp  gyro_sensor.h  gyro_sensor_hal.cpp  gyro_sensor_hal.h
src/hal/: CMakeLists.txt  sensor_hal.h  sensor_hal_types.h  sensors_hal.h
src/libsensord/: CMakeLists.txt  CMakeLists.txt~  client.cpp  client.cpp~  client_common.cpp  client_common.h  command_channel.cpp  command_channel.h  creg_event_info.h  csensor_client_info.cpp  csensor_client_info.h  csensor_event_listener.cpp  csensor_event_listener.h  csensor_handle_info.cpp  csensor_handle_info.h  poller.cpp  poller.h  sensor.h  sensor.pc  sensor_accel.h  sensor_auto_rotation.h  sensor_bio_led_red.h  sensor_context.h  sensor_deprecated.h  sensor_fusion.h  sensor_gaming_rv.h  sensor_geomag.h  sensor_geomagnetic_rv.h  sensor_gravity.h  sensor_gyro.h  sensor_info_manager.cpp  sensor_info_manager.h  sensor_internal.h  sensor_internal_deprecated.h  sensor_light.h  sensor_linear_accel.h  sensor_motion.h  sensor_orientation.h  sensor_pressure.h  sensor_proxi.h  (+4 more)
src/light/: CMakeLists.txt  light_sensor.cpp  light_sensor.h  light_sensor_hal.cpp  light_sensor_hal.h
src/linear_accel/: CMakeLists.txt  linear_accel_sensor.cpp  linear_accel_sensor.h
src/orientation/: CMakeLists.txt  orientation_sensor.cpp  orientation_sensor.h
src/pressure/: CMakeLists.txt  pressure_sensor.cpp  pressure_sensor.h  pressure_sensor_hal.cpp  pressure_sensor_hal.h
src/proxi/: CMakeLists.txt  proxi_sensor.cpp  proxi_sensor.h  proxi_sensor_hal.cpp  proxi_sensor_hal.h
src/rotation_vector/: CMakeLists.txt
src/sensor/: CMakeLists.txt  fusion_util.cpp  fusion_util.h  virtual_sensors.xml
src/sensor_fusion/: CMakeLists.txt  euler_angles.cpp  euler_angles.h  lib_sensor_fusion.cpp  lib_sensor_fusion.h  matrix.cpp  matrix.h  orientation_filter.cpp  orientation_filter.h  quaternion.cpp  quaternion.h  rotation_matrix.cpp  rotation_matrix.h  sensor_data.cpp  sensor_data.h  sensor_fusion.cpp  sensor_fusion.h  vector.cpp  vector.h
src/sensorctl/: CMakeLists.txt  dbus_util.cpp  dbus_util.h  info.cpp  info.h  info_manager.cpp  info_manager.h  injector.cpp  injector.h  injector_context_orientation.cpp  injector_context_orientation.h  injector_manager.cpp  injector_manager.h  injector_sensor.cpp  injector_wristup_algo.cpp  injector_wristup_algo.h  injector_wristup_conf.cpp  log.h  macro.h  sensor_manager.cpp  sensor_manager.h  sensorctl.cpp  sensorctl_log.h  tester.cpp  tester.h  tester_all.cpp  tester_all.h  tester_auto.cpp  tester_auto.h  tester_common.cpp  tester_common.h  tester_manager.cpp  tester_manager.h  tester_manual.cpp  tester_manual.h  tester_scenario.h  tester_sensor.cpp  tester_sensor.h  tester_util.cpp  tester_util.h
src/server/: CMakeLists.txt  cclient_info_manager.cpp  cclient_info_manager.h  cclient_sensor_record.cpp  cconfig.cpp  cconfig.h  client_info_manager.cpp  client_info_manager.h  client_sensor_record.cpp  client_sensor_record.h  command_queue.cpp  command_queue.h  command_worker.cpp  command_worker.h  cplugin_info_list.cpp  cplugin_info_list.h  csensor_event_dispatcher.cpp  csensor_event_dispatcher.h  csensor_event_queue.cpp  csensor_event_queue.h  csensor_usage.cpp  csensor_usage.h  cvirtual_sensor_config.cpp  cvirtual_sensor_config.h  dbus_util.cpp  dbus_util.h  device_config.cpp  device_config.h  external_client_manager.cpp  external_client_manager.h  external_sensor.cpp  external_sensor.h  external_sensor_record.cpp  external_sensor_record.h  external_sensor_service.cpp  external_sensor_service.h  external_sensor_worker.cpp  external_sensor_worker.h  main.cpp  permission_checker.cpp  (+35 more)
src/shared/: CMakeLists.txt  CMakeLists.txt~  batch_info_list.cpp  batch_info_list.h  cbase_lock.cpp  cbase_lock.h  cbatch_info_list.cpp  cbatch_info_list.h  cclient_info_manager.cpp  cclient_info_manager.h  cclient_sensor_record.cpp  cclient_sensor_record.h  cconfig.cpp  cconfig.h  cinterval_info_list.cpp  cinterval_info_list.h  cmutex.cpp  cmutex.h  (+71 more)
test/: CMakeLists.txt  sensor-tc.pc  sensor-tc.pc.in  sensor-tc.pc.in~
(+1305 files in other folders)
