cmake_minimum_required(VERSION 2.6)
project(sensord_src CXX)

include_directories(${CMAKE_SOURCE_DIR}/src/shared)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

IF("${ACCEL}" STREQUAL "ON")
add_subdirectory(accel)
ENDIF()
IF("${GYRO}" STREQUAL "ON")
add_subdirectory(gyro)
ENDIF()
IF("${UNCAL_GYRO}" STREQUAL "ON")
add_subdirectory(uncal_gyro)
ENDIF()
IF("${PROXI}" STREQUAL "ON")
add_subdirectory(proxi)
ENDIF()
IF("${LIGHT}" STREQUAL "ON")
add_subdirectory(light)
ENDIF()
IF("${GEO}" STREQUAL "ON")
add_subdirectory(geo)
ENDIF()
IF("${UNCAL_GEO}" STREQUAL "ON")
add_subdirectory(uncal_geo)
ENDIF()
IF("${PRESSURE}" STREQUAL "ON")
add_subdirectory(pressure)
ENDIF()
IF("${TEMPERATURE}" STREQUAL "ON")
add_subdirectory(temperature)
ENDIF()
IF("${HUMIDITY}" STREQUAL "ON")
add_subdirectory(humidity)
ENDIF()
IF("${ULTRAVIOLET}" STREQUAL "ON")
add_subdirectory(ultraviolet)
ENDIF()
IF("${ORIENTATION}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
ENDIF()
IF("${GRAVITY}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
ENDIF()
IF("${LINEAR_ACCEL}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
set(LINEAR_ACCELERATION_ENABLE "1")
ENDIF()
IF("${SENSOR_FUSION_ENABLE}" STREQUAL "1")
add_subdirectory(sensor_fusion)
ENDIF()
IF("${ORIENTATION_ENABLE}" STREQUAL "1")
add_subdirectory(orientation)
ENDIF()
IF("${GRAVITY_ENABLE}" STREQUAL "1")
add_subdirectory(gravity)
ENDIF()
IF("${LINEAR_ACCELERATION_ENABLE}" STREQUAL "1")
add_subdirectory(linear_accel)
ENDIF()
add_subdirectory(rotation_vector)

add_subdirectory(server)
add_subdirectory(libsensord)
add_subdirectory(shared)
