cmake_minimum_required(VERSION 2.6)
project(sensord_src CXX)

include_directories(${CMAKE_SOURCE_DIR}/src/shared)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

IF("${ACCEL}" STREQUAL "ON")
add_subdirectory(plugins/accel)
ENDIF()
IF("${GYRO}" STREQUAL "ON")
add_subdirectory(plugins/gyro)
ENDIF()
IF("${PROXI}" STREQUAL "ON")
add_subdirectory(plugins/proxi)
ENDIF()
IF("${LIGHT}" STREQUAL "ON")
add_subdirectory(plugins/light)
ENDIF()
IF("${GEO}" STREQUAL "ON")
add_subdirectory(plugins/geo)
ENDIF()
IF("${AUTO_ROTATION}" STREQUAL "ON")
add_subdirectory(plugins/auto_rotation)
ENDIF()
IF("${PRESSURE}" STREQUAL "ON")
add_subdirectory(plugins/pressure)
ENDIF()
IF("${TEMPERATURE}" STREQUAL "ON")
add_subdirectory(plugins/temperature)
ENDIF()
IF("${HUMIDITY}" STREQUAL "ON")
add_subdirectory(humidity)
ENDIF()
IF("${ULTRAVIOLET}" STREQUAL "ON")
add_subdirectory(plugins/ultraviolet)
ENDIF()
IF("${BIO_LED_RED}" STREQUAL "ON")
add_subdirectory(plugins/bio_led_red)
ENDIF()
IF("${ORIENTATION}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
ENDIF()
IF("${GEOMAGNETIC_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
ENDIF()
IF("${GAMING_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
ENDIF()
IF("${TILT}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(TILT_ENABLE "1")
ENDIF()
IF("${UNCAL_GYRO}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(UNCAL_GYRO_ENABLE "1")
ENDIF()
IF("${GRAVITY}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
ENDIF()
IF("${LINEAR_ACCEL}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
set(LINEAR_ACCELERATION_ENABLE "1")
ENDIF()
IF("${SENSOR_FUSION_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/sensor_fusion)
add_subdirectory(plugins/fusion)
ENDIF()
IF("${ORIENTATION_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/orientation)
ENDIF()
IF("${GRAVITY_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/gravity)
ENDIF()
IF("${LINEAR_ACCELERATION_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/linear_accel)
ENDIF()
IF("${TILT_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/tilt)
ENDIF()
IF("${UNCAL_GYRO_ENABLE}" STREQUAL "1")
add_subdirectory(plugins/uncal_gyro)
ENDIF()

add_subdirectory(plugins/rotation_vector)
add_subdirectory(server)
add_subdirectory(client)
add_subdirectory(shared)

