cmake_minimum_required(VERSION 2.6)
project(geo CXX)

SET(SENSOR_NAME geo_sensor)
SET(SENSOR_HAL_NAME geo_sensor_hal)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src/libsensord)

FOREACH(flag ${geo_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${geo_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

add_library(${SENSOR_NAME} SHARED
		geo_sensor.cpp
)

add_library(${SENSOR_HAL_NAME} SHARED
		geo_sensor_hal.cpp
)

target_link_libraries(${SENSOR_NAME} ${geo_pkgs_LDFLAGS} "-lm")
target_link_libraries(${SENSOR_HAL_NAME} ${geo_pkgs_LDFLAGS})

install(TARGETS ${SENSOR_NAME} DESTINATION ${PLUGINDIR})
install(TARGETS ${SENSOR_HAL_NAME} DESTINATION ${PLUGINDIR})
