CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensor-hal CXX)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(FILES sensor_hal.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sensor/)

IF(0)
INSTALL(
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sensor/
	FILES_MATCHING PATTERN "*.h"
)
ENDIF()
