cmake_minimum_required(VERSION 2.6)
project(pressure CXX)

SET(SENSOR_NAME pressure_sensor)
SET(SENSOR_HAL_NAME pressure_sensor_hal)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src/libsensord)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(pressure_pkgs REQUIRED vconf)

FOREACH(flag ${pressure_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${pressure_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

add_library(${SENSOR_NAME} SHARED
		pressure_sensor.cpp
		)

add_library(${SENSOR_HAL_NAME} SHARED
		pressure_sensor_hal.cpp
		)

target_link_libraries(${SENSOR_NAME} ${pressure_pkgs_LDFLAGS} "-lm")
target_link_libraries(${SENSOR_HAL_NAME} ${pressure_pkgs_LDFLAGS})

install(TARGETS ${SENSOR_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/sensord)
install(TARGETS ${SENSOR_HAL_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/sensord)
