cmake_minimum_required(VERSION 2.6)
project(proxi CXX)

SET(SENSOR_NAME proxi_sensor)
SET(SENSOR_HAL_NAME proxi_sensor_hal)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src/libsensord)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(proxi_pkgs REQUIRED vconf)

FOREACH(flag ${proxi_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${proxi_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

add_library(${SENSOR_NAME} SHARED
	proxi_sensor.cpp
)

add_library(${SENSOR_HAL_NAME} SHARED
        proxi_sensor_hal.cpp
)

target_link_libraries(${SENSOR_NAME} ${proxi_pkgs_LDFLAGS} "-lm")
target_link_libraries(${SENSOR_HAL_NAME} ${proxi_pkgs_LDFLAGS})

install(TARGETS ${SENSOR_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/sensord)
install(TARGETS ${SENSOR_HAL_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/sensord)
