CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensorctl CXX)
INCLUDE(GNUInstallDirs)

SET(DEPS glib-2.0 gio-2.0)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED ${DEPS})

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/src/hal/
	${CMAKE_SOURCE_DIR}/src/client/
	${CMAKE_SOURCE_DIR}/src/shared/
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS}")

# Installing files
FILE(GLOB_RECURSE SRCS *.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} sensor gtest)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION /usr/bin/)
