cmake_minimum_required(VERSION 2.6)
project(sensord-shared CXX)

SET(DEPENDENTS "dlog")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(SHARED_PKGS REQUIRED ${DEPENDENTS})

FOREACH(flag ${SHARED_PKGS_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/client)

FILE(GLOB_RECURSE SRCS *.cpp)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SHARED_PKGS_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
INSTALL(
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sensor/
	FILES_MATCHING PATTERN "*.h"
	)
